--- a/sequence-lite.html
+++ b/sequence-lite.html
@@ -19,35 +19,38 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Helios</a></h1>
+            <h1>SequenceLite</h1>
           </header>
         </div>
 
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a class="scrolly" href="index.html">Home</a></li>
             <li>
-              <a href="#">Dropdown</a>
-              <ul>
-                <li><a href="#">Lorem ipsum dolor</a></li>
-                <li><a href="#">Magna phasellus</a></li>
-                <li><a href="#">Etiam dolore nisl</a></li>
-                <li>
-                  <a href="#">And a submenu &hellip;</a>
-                  <ul>
-                    <li><a href="#">Lorem ipsum dolor</a></li>
-                    <li><a href="#">Phasellus consequat</a></li>
-                    <li><a href="#">Magna phasellus</a></li>
-                    <li><a href="#">Etiam dolore nisl</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Veroeros feugiat</a></li>
-              </ul>
+              <a
+                class="scrolly"
+                href="https://youtu.be/Xh0qd6lqNcs"
+                target="_blank"
+                >Demo</a
+              >
             </li>
-            <li><a href="left-sidebar.html">Left Sidebar</a></li>
-            <li><a href="right-sidebar.html">Right Sidebar</a></li>
-            <li><a href="no-sidebar.html">No Sidebar</a></li>
+            <li>
+              <a href="https://sequence-lite.netlify.app/" target="_blank"
+                >Hosted Site</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/HarryWilson1995/JS-Card-Game-Sequence-SPA-"
+                target="_blank"
+                >Github</a
+              >
+            </li>
+            <li>
+              <a href="./index.html#features">More Projects</a>
+            </li>
+            <li><a href="#footer" class="scrolly">Contact/Links</a></li>
           </ul>
         </nav>
       </div>
@@ -166,181 +169,64 @@
       <div id="footer">
         <div class="container">
           <div class="row">
-            <!-- Tweets -->
-            <section class="col-4 col-12-mobile">
-              <header>
-                <h2 class="icon brands fa-twitter circled">
-                  <span class="label">Tweets</span>
-                </h2>
-              </header>
-              <ul class="divided">
-                <li>
-                  <article class="tweet">
-                    Amet nullam fringilla nibh nulla convallis tique ante sociis
-                    accumsan.
-                    <span class="timestamp">5 minutes ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="tweet">
-                    Hendrerit rutrum quisque.
-                    <span class="timestamp">30 minutes ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="tweet">
-                    Curabitur donec nulla massa laoreet nibh. Lorem praesent
-                    montes.
-                    <span class="timestamp">3 hours ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="tweet">
-                    Lacus natoque cras rhoncus curae dignissim ultricies.
-                    Convallis orci aliquet.
-                    <span class="timestamp">5 hours ago</span>
-                  </article>
-                </li>
-              </ul>
-            </section>
-
-            <!-- Posts -->
-            <section class="col-4 col-12-mobile">
-              <header>
-                <h2 class="icon solid fa-file circled">
-                  <span class="label">Posts</span>
-                </h2>
-              </header>
-              <ul class="divided">
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Nisl fermentum integer</a></h3>
-                    </header>
-                    <span class="timestamp">3 hours ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Phasellus portitor lorem</a></h3>
-                    </header>
-                    <span class="timestamp">6 hours ago</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Magna tempus consequat</a></h3>
-                    </header>
-                    <span class="timestamp">Yesterday</span>
-                  </article>
-                </li>
-                <li>
-                  <article class="post stub">
-                    <header>
-                      <h3><a href="#">Feugiat lorem ipsum</a></h3>
-                    </header>
-                    <span class="timestamp">2 days ago</span>
-                  </article>
-                </li>
-              </ul>
-            </section>
-
-            <!-- Photos -->
-            <section class="col-4 col-12-mobile">
-              <header>
-                <h2 class="icon solid fa-camera circled">
-                  <span class="label">Photos</span>
-                </h2>
-              </header>
-              <div class="row gtr-25">
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic10.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic11.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic12.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic13.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic14.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="image fit"
-                    ><img src="images/pic15.jpg" alt=""
-                  /></a>
-                </div>
-              </div>
-            </section>
-          </div>
-          <hr />
-          <div class="row">
             <div class="col-12">
               <!-- Contact -->
-              <section class="contact">
+              <section class="contact" id="contact-area">
                 <header>
-                  <h3>Nisl turpis nascetur interdum?</h3>
+                  <h3>Contact Details and Links</h3>
                 </header>
                 <p>
-                  Urna nisl non quis interdum mus ornare ridiculus egestas
-                  ridiculus lobortis vivamus tempor aliquet.
+                  Check out the links below to my technical blog, Github,
+                  Codepen and LinkedIn. Want to email me to discuss job
+                  opportunities, you can email me at
+                  <a id="email-link" href="mailto:harry.wilson1995a@gmail.com"
+                    >harry.wilson1995a@gmail.com</a
+                  >
+                  <br />
+                  <br />
+                  <a
+                    href="https://docs.google.com/document/d/1mUgdZ7meuXw9iV4zSNI_CKuvo2Rbj1w4sIlm1vMWR5E/edit?usp=sharing"
+                    target="_blank"
+                    id="resumeBtn"
+                    class="button"
+                    >View My Resume</a
+                  >
                 </p>
                 <ul class="icons">
                   <li>
-                    <a href="#" class="icon brands fa-twitter"
-                      ><span class="label">Twitter</span></a
+                    <a
+                      href="https://medium.com/@harry.wilson1995a"
+                      target="_blank"
+                      class="icon brands fab fa-medium"
+                      ><span class="label">Medium</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="icon brands fa-facebook-f"
-                      ><span class="label">Facebook</span></a
+                    <a
+                      href="https://github.com/HarryWilson1995"
+                      target="_blank"
+                      class="icon brands fab fa-github"
+                      ><span class="label">Github</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="icon brands fa-instagram"
-                      ><span class="label">Instagram</span></a
+                    <a
+                      href="https://codepen.io/HarryWilson"
+                      target="_blank"
+                      class="icon brands fab fa-codepen"
+                      ><span class="label">Codepen</span></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="icon brands fa-pinterest"
-                      ><span class="label">Pinterest</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#" class="icon brands fa-dribbble"
-                      ><span class="label">Dribbble</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#" class="icon brands fa-linkedin-in"
+                    <a
+                      href="https://www.linkedin.com/in/harryswilson/"
+                      target="_blank"
+                      class="icon brands fa-linkedin-in"
                       ><span class="label">Linkedin</span></a
                     >
                   </li>
                 </ul>
               </section>
-
-              <!-- Copyright -->
-              <div class="copyright">
-                <ul class="menu">
-                  <li>&copy; Untitled. All rights reserved.</li>
-                  <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                </ul>
-              </div>
             </div>
           </div>
         </div>
