add videos to portfolio showcase pages and make responsive

--- a/sequence-lite.html
+++ b/sequence-lite.html
@@ -60,14 +60,25 @@
         <div class="container">
           <article id="main" class="special">
             <header>
-              <h2><a href="#">No Sidebar</a></h2>
+              <h2>
+                Full Stack JavaScript/Rails Single Page Application Card Game -
+                SequenceLite
+              </h2>
               <p>
-                Morbi convallis lectus malesuada sed fermentum dolore amet
+                Check out this short Youtube video below which demonstrates how
+                the application works.
               </p>
             </header>
-            <a href="#" class="image featured"
-              ><img src="images/pic06.jpg" alt=""
-            /></a>
+            <div id="video-container">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/Xh0qd6lqNcs"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit. Curae
               suspendisse mauris posuere accumsan massa posuere lacus convallis
