--- a/sequence-lite.html
+++ b/sequence-lite.html
@@ -79,6 +79,22 @@
                 allowfullscreen
               ></iframe>
             </div>
+            <ul id="link-container">
+              <li>
+                Github Repo:
+                <a
+                  href="https://github.com/HarryWilson1995/JS-Card-Game-Sequence-SPA-"
+                  target="_blank"
+                  >Here</a
+                >
+              </li>
+              <li>
+                Hosted Site
+                <a href="https://sequence-lite.netlify.app/" target="_blank"
+                  >Here</a
+                >
+              </li>
+            </ul>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit. Curae
               suspendisse mauris posuere accumsan massa posuere lacus convallis
