--- a/sequence-lite.html
+++ b/sequence-lite.html
@@ -96,99 +96,45 @@
               </li>
             </ul>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit. Curae
-              suspendisse mauris posuere accumsan massa posuere lacus convallis
-              tellus interdum. Amet nullam fringilla nibh nulla convallis ut
-              venenatis purus lobortis. Auctor etiam porttitor phasellus tempus
-              cubilia ultrices tempor sagittis. Nisl fermentum consequat integer
-              interdum integer purus sapien. Nibh eleifend nulla nascetur
-              pharetra commodo mi augue interdum tellus. Ornare cursus augue
-              feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-              natoque aenean scelerisque vel lacinia mollis quam sodales congue.
+              This multiplayer single page card game application will provide
+              hours of competitive fun. The goal of the game is to place
+              consecutive runs of 3 cards of the same suit or place three cards
+              which have the same number value. Once you have no cards left in
+              your hand, you score a point and the game restarts, keeping track
+              of your scores if you wish to continue or giving you the option to
+              start a new game with different players. The rules can be found at
+              any point during the game by clicking the rules button in the top
+              right corner of the page which will open up a modal
             </p>
             <section>
               <header>
-                <h3>Ultrices tempor sagittis nisl</h3>
+                <h3>Technology Used:</h3>
               </header>
               <p>
-                Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus
-                ultrices porttitor sollicitudin imperdiet at pretium tellus in
-                euismod a integer sodales neque. Nibh quis dui quis mattis eget
-                imperdiet venenatis feugiat. Neque primis ligula cum erat aenean
-                tristique luctus risus ipsum praesent iaculis. Fermentum elit
-                fringilla consequat dis arcu. Pellentesque mus tempor vitae
-                pretium sodales porttitor lacus. Phasellus egestas odio nisl
-                duis sociis purus faucibus morbi. Eget massa mus etiam sociis
-                pharetra magna.
+                <strong>Frontend -</strong> HTML, CSS, Vanilla JavaScript, ES6
+                Classes, Object Oriented Programming, Sortable.js, Sortable.js
+                MultiDrag Plugin
               </p>
               <p>
-                Eleifend auctor turpis magnis sed porta nisl pretium. Aenean
-                suspendisse nulla eget sed etiam parturient orci cursus nibh.
-                Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim
-                cras rutrum consectetur ut penatibus fermentum nibh erat
-                malesuada varius.
+                <strong>Backend -</strong> Ruby on Rails API, ActiveRecord,
+                SQLite (development), Postgresql (in production), SQL,
+                ApplicationRecord, Ruby, multiple Ruby gems.
               </p>
             </section>
             <section>
               <header>
-                <h3>Augue euismod feugiat tempus</h3>
+                <h3>Future Plans:</h3>
               </header>
               <p>
-                Pretium tellus in euismod a integer sodales neque. Nibh quis dui
-                quis mattis eget imperdiet venenatis feugiat. Neque primis
-                ligula cum erat aenean tristique luctus risus ipsum praesent
-                iaculis. Fermentum elit ut nunc urna volutpat donec cubilia
-                commodo risus morbi. Lobortis vestibulum velit malesuada ante
-                egestas odio nisl duis sociis purus faucibus morbi. Eget massa
-                mus etiam sociis pharetra magna.
+                In the future I plan on using web sockets to create a
+                multiplayer game that is not a single page application. I also
+                wish to add additional rules including the ability to buy cards,
+                add to other players sequences from your own hand and much more.
+                I plan on making this next version of the application with the
+                MERN Stack and socket.io.
               </p>
             </section>
           </article>
-          <hr />
-          <div class="row">
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic07.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Gravida aliquam penatibus</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic08.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic09.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Magna laoreet et aliquam</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-          </div>
         </div>
       </div>
 
